syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (TokenValidationResponse);
  
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message TokenValidationResponse {
  bool isValid = 1;
  string message = 2;
  Token payload = 3;
}

message Token {
  string sub = 1;
  string email = 2;
  string phone = 3;
  int32 role = 4;
  string name = 5;
}

